--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.7",
     "axios": "^0.21.1",
+    "bootstrap": "5.0.2",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
